intial commit of infra.data project and migration

--- a/CleanArchDemoo/CleanArch.MVC/appsettings.json
+++ b/CleanArchDemoo/CleanArch.MVC/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-82UGRPQ;Database=CleanArchDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-82UGRPQ;Database=CleanArchDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=DESKTOP-82UGRPQ;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "Logging": {
     "LogLevel": {
