--- a/CleanArchDemoo/CleanArch.MVC/appsettings.json
+++ b/CleanArchDemoo/CleanArch.MVC/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-82UGRPQ;Database=CleanArchDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "UniversityDBConnection": "Server=DESKTOP-82UGRPQ;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"UniversityDBConnection": "Server=DESKTOP-82UGRPQ;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityDBConnection": "Server=DESKTOP-4EDQJ8G\\MSSQLSERVER01;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "Logging": {
